--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,6 +9,8 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
+†Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & Napurí, Andrés. (2027) “Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial”. _Onomázein_, 76(2), https://doi.org/10.7764/onomazein.76.02
+
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
