--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,24 +9,48 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-Journal Articles
+<h1>Journal Articles</h1>
 ======
 
-to be published   †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <b>Napurí, Andrés</b>. “Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial”. Onomázein, 76(2), https://doi.org/10.7764/onomazein.76.02
-to be published   Andrade, Luis, <b>Napurí, Andrés</b>, Frisancho, Susana & Delgado, Enrique. “Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú”. Mutatis Mutandis. Revista Latinoamericana de Traducción, 18(2), xxx-xxx. https://doi.org/10.17533/udea.mut.v18n2aXX
-2024          	  Cabel, Andrea & <b>Napurí, Andrés</b>. Benjamín Saldaña Rocca y la representación indígena en La Felpa. Boletín de la Academia Peruana de la Lengua, 76, pp. 215-246. https://doi.org/10.46744/bapl.202402.007
-2024	            Palomino, Paola, <b>Napurí, Andrés</b> & Heckman, Andrea. El tejido como expresión integral del mundo de la mujer Acchahuata (región Cuzco, Perú). Diálogo Andino, núm. 75, pp. 198-211. http://dx.doi.org/10.4067/S0719-26812024000300187
-2023	            <b>Napurí, Andrés; Andrade, Luis; Delgado, Enrique & Frisancho, Susana. “Historias de vida con miembros de pueblos indígenas: apuntes metodológicos a partir de dos libros recientes”. Indiana, vol. 40, núm. 1, pp. 263-289. https://doi.org/10.18441/ind.v40i1.263-289 
-2022              Bolo, Oswaldo & <b>Napurí, Andrés</b>. Letras (Lima): algunas lecciones hacia el centenario. vol. 93, núm. 138, pp. 4-14.
-https://doi.org/10.30920/letras.93.138.1
-2020              Rojas-Berscia, Luis Miguel; <b>Napurí, Andrés</b> & Wang, Lei. “Shawi (Chayahuita)”. Journal of the International Phonetic Association, vol. 50, núm. 3, pp. 417-430.
-https://doi.org/10.1017/S0025100318000415
-2018              <b>Napurí, Andrés</b> & †Panduro, Walter. “Sobre partes del cuerpo bora: polisemia y derivación nominal con cambio tonal”. Línguas Indígenas Americanas, vol. 18, núm. 2, pp. 7-19. 
-https://doi.org/10.20396/liames.v18i2.8651025
-2018	            “Eso era mi meta de mí”: el doble posesivo en dos variedades de español amazónico”. Lexis, vol. 42, núm. 1, pp. 191-205. https://doi.org/10.18800/lexis.201801.008
-2015	            “Breve caracterización fonológica de la lengua bora”. Lenguaje y Sociedad, vol. 15, núm. 2, pp. 15-34. https://doi.org/10.15381/lengsoc.v15i2.22574
-2013	            “Adquisición de las vocales anteriores del español por hablantes de quechua”. Estudios interlingüísticos, año 1, pp. 87-101.
-2011	            “Análisis de dos duraciones: durar y durante”. Lexis, volumen XXXV, núm. 2, pp. 365-377. https://doi.org/10.18800/lexis.201102.006
-2009	            “Definiciones en las Papeletas lexicográficas de Ricardo Palma”. Boletín de la Academia Peruana de la Lengua, volumen 48, número 1, pp. 125-137. https://doi.org/10.46744/bapl.200902.007
+<h1>Publications</h1>
+
+<div class="pub-list">
+  <div class="pub-item">
+    <span class="pub-year">to be published</span>
+    <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. _Onomáizen_, 76(2), https://doi.org/10.7764/onomazein.76.02.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Napurí, A. <strong>Another Title</strong>. Conference Proceedings, pp. 34–50.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2023</span>
+    <span class="pub-info">Napurí, A. <strong>Yet Another Title</strong>. Book Chapter, Publisher.</span>
+  </div>
+</div>
+
+<style>
+.pub-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em; /* space between publications */
+}
+
+.pub-item {
+  display: flex;
+}
+
+.pub-year {
+  width: 80px; /* fixed width for year column */
+  font-weight: bold;
+  text-align: right;
+  margin-right: 1em; /* space between year and info */
+}
+
+.pub-info {
+  flex: 1; /* takes remaining space */
+}
+</style>
+
 
 
