--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,22 +10,19 @@ author_profile: true
 {% endif %}
 
 <h1>Journal Articles</h1>
-======
-
-<h1>Publications</h1>
 
 <div class="pub-list">
   <div class="pub-item">
     <span class="pub-year">to be published</span>
-    <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. _Onomáizen_, 76(2), https://doi.org/10.7764/onomazein.76.02.</span>
+    <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. <em>Onomáizen</em>, 76(2), https://doi.org/10.7764/onomazein.76.02.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">to be published</span>
+    <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), https://doi.org/10.17533/udea.mut.v18n2aXX.</span>
   </div>
   <div class="pub-item">
     <span class="pub-year">2024</span>
-    <span class="pub-info">Napurí, A. <strong>Another Title</strong>. Conference Proceedings, pp. 34–50.</span>
-  </div>
-  <div class="pub-item">
-    <span class="pub-year">2023</span>
-    <span class="pub-info">Napurí, A. <strong>Yet Another Title</strong>. Book Chapter, Publisher.</span>
+    <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. https://doi.org/10.46744/bapl.202402.007.</span>
   </div>
 </div>
 
