--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,7 +9,9 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
+
 <h1>Journal Articles</h1>
+
 
 <div class="pub-list">
   <div class="pub-item">
@@ -22,7 +24,47 @@ author_profile: true
   </div>
   <div class="pub-item">
     <span class="pub-year">2024</span>
-    <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. https://doi.org/10.46744/bapl.202402.007.</span>
+    <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. https://doi.org/10.46744/bapl.202402.007.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Palomino, Paola, <strong>Napurí, Andrés</strong> & Heckman, Andrea. El tejido como expresión integral del mundo de la mujer Acchahuata (región Cuzco, Perú). <em>Diálogo Andino</em>, 75, pp. 198-211. http://dx.doi.org/10.4067/S0719-26812024000300187.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2023</span>
+    <span class="pub-info"><strong>Napurí, Andrés</strong>; Andrade, Luis; Delgado, Enrique & Frisancho, Susana. Historias de vida con miembros de pueblos indígenas: apuntes metodológicos a partir de dos libros recientes. <em>Indiana</em>, 40, 1, 263-289. https://doi.org/10.18441/ind.v40i1.263-289.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2022</span>
+    <span class="pub-info">Bolo, Oswaldo & <strong>Napurí, Andrés</strong>. <em>Letras (Lima)</em>: algunas lecciones hacia el centenario. <em>Letras (Lima)</em>, 93, 138, pp. 4-14. https://doi.org/10.30920/letras.93.138.1.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2020</span>
+    <span class="pub-info">Rojas-Berscia, Luis Miguel; <strong>Napurí, Andrés</strong> & Wang, Lei. Shawi (Chayahuita). <em>Journal of the International Phonetic Association</em>, 50, 3, pp. 417-430. https://doi.org/10.1017/S0025100318000415.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2018</span>
+    <span class="pub-info"><strong>Napurí, Andrés</strong> & †Panduro, Walter. Sobre partes del cuerpo bora: polisemia y derivación nominal con cambio tonal. <em>Línguas Indígenas Americanas</em>, 18, 2, pp. 7-19. https://doi.org/10.20396/liames.v18i2.8651025.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2018</span>
+    <span class="pub-info">“Eso era mi meta de mí”: el doble posesivo en dos variedades de español amazónico. <em>Lexis</em>, 42, 1, pp. 191-205. https://doi.org/10.18800/lexis.201801.008.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2015</span>
+    <span class="pub-info">Breve caracterización fonológica de la lengua bora. <em>Lenguaje y Sociedad</em>, 15, 2, pp. 15-34. https://doi.org/10.15381/lengsoc.v15i2.22574.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2013</span>
+    <span class="pub-info">Adquisición de las vocales anteriores del español por hablantes de quechua. <em>Estudios Interlingüísticos</em>, 1, pp. 87-101. https://doi.org/10.46744/bapl.202402.007.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2011</span>
+    <span class="pub-info">Análisis de dos duraciones: durar y durante. <em>Lexis</em>, 35, 2, pp. 365-377. https://doi.org/10.18800/lexis.201102.006.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2009</span>
+    <span class="pub-info">Definiciones en las <em>Papeletas lexicográficas de Ricardo Palma</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 48, pp. 125-137. https://doi.org/10.46744/bapl.200902.007.</span>
   </div>
 </div>
 
