--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -81,7 +81,7 @@ author_profile: true
 
 .pub-year {
   width: 80px; /* fixed width for year column */
-  font-weight: bold;
+  font-weight: normal;
   text-align: right;
   margin-right: 1em; /* space between year and info */
 }
