--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,6 +23,10 @@ author_profile: true
     <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), https://doi.org/10.17533/udea.mut.v18n2aXX.</span>
   </div>
   <div class="pub-item">
+    <span class="pub-year">under review</span>
+    <span class="pub-info">Frisancho, Susana; Andrade, Luis; Delgado, Enrique & <strong>Napurí, Andrés</strong>. Moral Motivation and Identity of Indigenous Interpreters during the 2023 Peruvian Political Crisis. <em>Journal XYZ</em></span>
+  </div>
+  <div class="pub-item">
     <span class="pub-year">2024</span>
     <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. https://doi.org/10.46744/bapl.202402.007.</span>
   </div>
