--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -72,6 +72,32 @@ author_profile: true
   </div>
 </div>
 
+<h1>Book Chapters</h1>
+
+
+<div class="pub-list">
+  <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Una breve reflexión sobre el español amazónico y la importancia de las voces awajún. Silvia Romio, Manuel Cornejo Chaparro & Jean-Pierre Chaumeil (eds.). <em>Por mi camino. Memorias de Daniel Danducho. Primer profesor bilingüe awajún</em>, CAAAP, IFEA, pp. 203-214.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2022</span>
+    <span class="pub-info"><em>Tújpawa</em>>: los arreboles en el cielo (pueblo bora). Óscar Espinosa & Emanuele Fabiano (eds.). <em>Las enfermedades que llegan de lejos: los pueblos amazónicos del Perú frente a las epidemias del pasado y a la COVID-19</em>, Fondo Editorial PUCP, pp. 63-68.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2021</span>
+    <span class="pub-info">“Hablábamos al revés y ahí aprendimos, malogrando el castellano”: diálogo entre el español amazónico y la dialectología coseriana. Carlos Garatea & Jorge Wiesse (dirs.), Marta Fernández Alcaide (coord.). <em>Actualidad y futuro del pensamiento de Eugenio Coseriu. Estudios de teoría del lenguaje, descripción lingüística, dimensión textual y lingüística peruana</em>, Editorial Universidad de Sevilla, Fondo Editorial PUCP & Universidad del Pacifico, pp. 264-287.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2017</span>
+    <span class="pub-info">Revitalization of the Bora Language. Peter Trifonas & Themistoklis Aravossitas (eds.). <em>International Handbook of Heritage Language Education Research & Pedagogy</em>, Springer International Publishing, pp. 787-800, https://doi.org/10.1007/978-3-319-44694-3_24.</span>
+  </div>
+   <div class="pub-item">
+    <span class="pub-year">2013</span>
+    <span class="pub-info">Bases fonológicas del español andino: la relevancia de las vocales del quechua. Carla Amorós, Rudolf Muhr, Carmen Fernández, Klaus Zimmermann, Emilio Prieto & Natividad Hernández (eds.). <em>Exploring Linguistic Standards in Non-Dominant Varieties of Pluricentric Languages</em>, Peter Lang Verlag, pp. 423-440.</span>
+  </div>
+</div>
+
 <style>
 .pub-list {
   display: flex;
