--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -60,7 +60,7 @@ author_profile: true
   </div>
   <div class="pub-item">
     <span class="pub-year">2013</span>
-    <span class="pub-info">Adquisición de las vocales anteriores del español por hablantes de quechua. <em>Estudios Interlingüísticos</em>, 1, pp. 87-101. DOI: <a href="https://doi.org/10.46744/bapl.202402.007" target="_blank">10.46744/bapl.202402.007</a>.</span>
+    <span class="pub-info">Adquisición de las vocales anteriores del español por hablantes de quechua. <em>Estudios Interlingüísticos</em>, 1, pp. 87-101.</span>
   </div>
   <div class="pub-item">
     <span class="pub-year">2011</span>
