--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,9 +9,8 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-
+<div style="height: 50px;"></div>
 <h1>Journal Articles</h1>
-
 
 <div class="pub-list">
   <div class="pub-item">
@@ -73,6 +72,7 @@ author_profile: true
 </div>
 
 
+<div style="height: 50px;"></div>
 <h1>Book Chapters</h1>
 
 <div class="pub-list">
