--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -82,11 +82,11 @@ author_profile: true
   </div>
   <div class="pub-item">
     <span class="pub-year">2022</span>
-    <span class="pub-info"><em>Tújpawa</em>: los arreboles en el cielo (pueblo bora). Óscar Espinosa & Emanuele Fabiano (eds.). <em>Las enfermedades que llegan de lejos: los pueblos amazónicos del Perú frente a las epidemias del pasado y a la COVID-19</em>, Fondo Editorial PUCP, pp. 63-68.</span>
+    <span class="pub-info"><em>Tújpawa</em>: los arreboles en el cielo (pueblo bora). Óscar Espinosa & Emanuele Fabiano (eds.). <em>Las enfermedades que llegan de lejos: los pueblos amazónicos del Perú frente a las epidemias del pasado y a la COVID-19</em>, Fondo Editorial PUCP, pp. 63-68, URL <a href="https://hdl.handle.net/20.500.14657/190528" target="_blank">20.500.14657/190528</a></span>
   </div>
   <div class="pub-item">
     <span class="pub-year">2021</span>
-    <span class="pub-info">“Hablábamos al revés y ahí aprendimos, malogrando el castellano”: diálogo entre el español amazónico y la dialectología coseriana. Carlos Garatea & Jorge Wiesse (dirs.), Marta Fernández Alcaide (coord.). <em>Actualidad y futuro del pensamiento de Eugenio Coseriu. Estudios de teoría del lenguaje, descripción lingüística, dimensión textual y lingüística peruana</em>, Editorial Universidad de Sevilla, Fondo Editorial PUCP & Universidad del Pacífico, pp. 264-287.</span>
+    <span class="pub-info">“Hablábamos al revés y ahí aprendimos, malogrando el castellano”: diálogo entre el español amazónico y la dialectología coseriana. Carlos Garatea & Jorge Wiesse (dirs.), Marta Fernández Alcaide (coord.). <em>Actualidad y futuro del pensamiento de Eugenio Coseriu. Estudios de teoría del lenguaje, descripción lingüística, dimensión textual y lingüística peruana</em>, Editorial Universidad de Sevilla, Fondo Editorial PUCP & Universidad del Pacífico, pp. 264-287, URL <a href="https://idus.us.es/server/api/core/bitstreams/c0734ed0-61be-4a06-b448-3c271008a793/content" target="_blank">c0734ed0-61be-4a06-b448-3c271008a793/content</a></span>
   </div>
   <div class="pub-item">
     <span class="pub-year">2017</span>
