--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -12,6 +12,11 @@ author_profile: true
 <div style="height: 50px;"></div>
 <h1>Journal Articles</h1>
 
+<p>
+  This denotes a work with a student: †
+  <sup><a href="#footnote1">1</a></sup>.
+</p>
+
 <div class="pub-list">
   <div class="pub-item">
     <span class="pub-year">to be published</span>
@@ -122,5 +127,12 @@ author_profile: true
 }
 </style>
 
+<hr>
+<ol>
+  <li id="footnote1">
+    Work with a student.
+    <a href="#top">↩</a>
+  </li>
+</ol>
 
 
