--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,8 +13,8 @@ author_profile: true
 <h1>Journal Articles</h1>
 
 <p>
-  This denotes a work with a student: †
-  <sup><a href="#footnote1">1</a></sup>.
+  Indicates a student 
+  <sup><a href="#footnote1">†</a></sup>.
 </p>
 
 <div class="pub-list">
@@ -130,7 +130,7 @@ author_profile: true
 <hr>
 <ol>
   <li id="footnote1">
-    Work with a student.
+    This research is the result of training or advising students. 
     <a href="#top">↩</a>
   </li>
 </ol>
