--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,1 +1,134 @@
---- layout: archive title: "Publications" permalink: /publications/ author_profile: true --- {% if site.author.googlescholar %} <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div> {% endif %} <div style="height: 50px;"></div> <h1>Journal Articles</h1> <p> Indicates a student <sup><a href="#footnote1">†</a></sup>. </p> <div class="pub-list"> <div class="pub-item"> <span class="pub-year">to be published</span> <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. <em>Onomáizen</em>, 76(2), DOI: <a href="https://doi.org/10.7764/onomazein.76.02" target="_blank">10.7764/onomazein.76.02</a>.</span> </div> <div class="pub-item"> <span class="pub-year">to be published</span> <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), DOI: <a href="https://doi.org/10.17533/udea.mut.v18n2aXX" target="_blank">10.17533/udea.mut.v18n2aXX</a>.</span> </div> <div class="pub-item"> <span class="pub-year">under review</span> <span class="pub-info">Frisancho, Susana; Andrade, Luis; Delgado, Enrique & <strong>Napurí, Andrés</strong>. Moral Motivation and Identity of Indigenous Interpreters during the 2023 Peruvian Political Crisis. <em>Journal XYZ</em></span> </div> <div class="pub-item"> <span class="pub-year">2024</span> <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. DOI: <a href="https://doi.org/10.46744/bapl.202402.007" target="_blank">10.46744/bapl.202402.007</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2024</span> <span class="pub-info">Palomino, Paola, <strong>Napurí, Andrés</strong> & Heckman, Andrea. El tejido como expresión integral del mundo de la mujer Acchahuata (región Cuzco, Perú). <em>Diálogo Andino</em>, 75, pp. 198-211. DOI: <a href="http://dx.doi.org/10.4067/S0719-26812024000300187" target="_blank">10.4067/S0719-26812024000300187</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2023</span> <span class="pub-info"><strong>Napurí, Andrés</strong>; Andrade, Luis; Delgado, Enrique & Frisancho, Susana. Historias de vida con miembros de pueblos indígenas: apuntes metodológicos a partir de dos libros recientes. <em>Indiana</em>, 40, 1, 263-289. DOI: <a href="https://doi.org/10.18441/ind.v40i1.263-289" target="_blank">10.18441/ind.v40i1.263-289</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2022</span> <span class="pub-info">Bolo, Oswaldo & <strong>Napurí, Andrés</strong>. <em>Letras (Lima)</em>: algunas lecciones hacia el centenario. <em>Letras (Lima)</em>, 93, 138, pp. 4-14. DOI: <a href="https://doi.org/10.30920/letras.93.138.1" target="_blank">10.30920/letras.93.138.1</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2020</span> <span class="pub-info">Rojas-Berscia, Luis Miguel; <strong>Napurí, Andrés</strong> & Wang, Lei. Shawi (Chayahuita). <em>Journal of the International Phonetic Association</em>, 50, 3, pp. 417-430. DOI: <a href="https://doi.org/10.1017/S0025100318000415" target="_blank">10.1017/S0025100318000415</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2018</span> <span class="pub-info"><strong>Napurí, Andrés</strong> & †Panduro, Walter. Sobre partes del cuerpo bora: polisemia y derivación nominal con cambio tonal. <em>Línguas Indígenas Americanas</em>, 18, 2, pp. 7-19. DOI: <a href="https://doi.org/10.20396/liames.v18i2.8651025" target="_blank">10.20396/liames.v18i2.8651025</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2018</span> <span class="pub-info">“Eso era mi meta de mí”: el doble posesivo en dos variedades de español amazónico. <em>Lexis</em>, 42, 1, pp. 191-205. DOI: <a href="https://doi.org/10.18800/lexis.201801.008" target="_blank">10.18800/lexis.201801.008</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2015</span> <span class="pub-info">Breve caracterización fonológica de la lengua bora. <em>Lenguaje y Sociedad</em>, 15, 2, pp. 15-34. DOI: <a href="https://doi.org/10.15381/lengsoc.v15i2.22574" target="_blank">10.15381/lengsoc.v15i2.22574</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2013</span> <span class="pub-info">Adquisición de las vocales anteriores del español por hablantes de quechua. <em>Estudios Interlingüísticos</em>, 1, pp. 87-101.</span> </div> <div class="pub-item"> <span class="pub-year">2011</span> <span class="pub-info">Análisis de dos duraciones: durar y durante. <em>Lexis</em>, 35, 2, pp. 365-377. DOI: <a href="https://doi.org/10.18800/lexis.201102.006" target="_blank">10.18800/lexis.201102.006</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2009</span> <span class="pub-info">Definiciones en las <em>Papeletas lexicográficas de Ricardo Palma</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 48, pp. 125-137. DOI: <a href="https://doi.org/10.46744/bapl.200902.007" target="_blank">10.46744/bapl.200902.007</a>.</span> </div> </div> <div style="height: 50px;"></div> <h1>Book Chapters</h1> <div class="pub-list"> <div class="pub-item"> <span class="pub-year">2024</span> <span class="pub-info">Una breve reflexión sobre el español amazónico y la importancia de las voces awajún. Silvia Romio, Manuel Cornejo Chaparro & Jean-Pierre Chaumeil (eds.). <em>Por mi camino. Memorias de Daniel Danducho. Primer profesor bilingüe awajún</em>, CAAAP, IFEA, pp. 203-214.</span> </div> <div class="pub-item"> <span class="pub-year">2022</span> <span class="pub-info"><em>Tújpawa</em>: los arreboles en el cielo (pueblo bora). Óscar Espinosa & Emanuele Fabiano (eds.). <em>Las enfermedades que llegan de lejos: los pueblos amazónicos del Perú frente a las epidemias del pasado y a la COVID-19</em>, Fondo Editorial PUCP, pp. 63-68, URL <a href="https://hdl.handle.net/20.500.14657/190528" target="_blank">20.500.14657/190528</a></span> </div> <div class="pub-item"> <span class="pub-year">2021</span> <span class="pub-info">“Hablábamos al revés y ahí aprendimos, malogrando el castellano”: diálogo entre el español amazónico y la dialectología coseriana. Carlos Garatea & Jorge Wiesse (dirs.), Marta Fernández Alcaide (coord.). <em>Actualidad y futuro del pensamiento de Eugenio Coseriu. Estudios de teoría del lenguaje, descripción lingüística, dimensión textual y lingüística peruana</em>, Editorial Universidad de Sevilla, Fondo Editorial PUCP & Universidad del Pacífico, pp. 264-287, URL <a href="https://idus.us.es/server/api/core/bitstreams/c0734ed0-61be-4a06-b448-3c271008a793/content" target="_blank">c0734ed0-61be-4a06-b448-3c271008a793/content</a></span> </div> <div class="pub-item"> <span class="pub-year">2017</span> <span class="pub-info">Revitalization of the Bora Language. Peter Trifonas & Themistoklis Aravossitas (eds.). <em>International Handbook of Heritage Language Education Research & Pedagogy</em>, Springer International Publishing, pp. 787-800, DOI: <a href="https://doi.org/10.1007/978-3-319-44694-3_24" target="_blank">10.1007/978-3-319-44694-3_24</a>.</span> </div> <div class="pub-item"> <span class="pub-year">2013</span> <span class="pub-info">Bases fonológicas del español andino: la relevancia de las vocales del quechua. Carla Amorós, Rudolf Muhr, Carmen Fernández, Klaus Zimmermann, Emilio Prieto & Natividad Hernández (eds.). <em>Exploring Linguistic Standards in Non-Dominant Varieties of Pluricentric Languages</em>, Peter Lang Verlag, pp. 423-440.</span> </div> </div> <style> .pub-list { display: flex; flex-direction: column; gap: 0.5em; /* space between publications */ } .pub-item { display: flex; } .pub-year { width: 80px; /* fixed width for year column */ font-weight: normal; text-align: right; margin-right: 1em; /* space between year and info */ } .pub-info { flex: 1; /* takes remaining space */ } </style> <hr> <ol> <li id="footnote1"> This research is the result of training or advising students. <a href="#top">↩</a> </li> </ol>
+---
+layout: archive
+title: "Publications"
+permalink: /publications/
+author_profile: true
+---
+
+{% if site.author.googlescholar %}
+  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+{% endif %}
+
+<div style="height: 50px;"></div>
+<h1>Journal Articles</h1>
+
+<p>
+  Indicates a student 
+  <sup><a href="#footnote1">†</a></sup>.
+</p>
+
+<div class="pub-list">
+  <div class="pub-item">
+    <span class="pub-year">to be published</span>
+    <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. <em>Onomáizen</em>, 76(2), DOI: <a href="https://doi.org/10.7764/onomazein.76.02" target="_blank">10.7764/onomazein.76.02</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">to be published</span>
+    <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), DOI: <a href="https://doi.org/10.17533/udea.mut.v18n2aXX" target="_blank">10.17533/udea.mut.v18n2aXX</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">under review</span>
+    <span class="pub-info">Frisancho, Susana; Andrade, Luis; Delgado, Enrique & <strong>Napurí, Andrés</strong>. Moral Motivation and Identity of Indigenous Interpreters during the 2023 Peruvian Political Crisis. <em>Journal XYZ</em></span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Cabel, Andrea & <strong>Napurí, Andrés</strong>. Benjamín Saldaña Rocca y la representación indígena en <em>La Felpa</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 76, pp. 215-246. DOI: <a href="https://doi.org/10.46744/bapl.202402.007" target="_blank">10.46744/bapl.202402.007</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Palomino, Paola, <strong>Napurí, Andrés</strong> & Heckman, Andrea. El tejido como expresión integral del mundo de la mujer Acchahuata (región Cuzco, Perú). <em>Diálogo Andino</em>, 75, pp. 198-211. DOI: <a href="http://dx.doi.org/10.4067/S0719-26812024000300187" target="_blank">10.4067/S0719-26812024000300187</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2023</span>
+    <span class="pub-info"><strong>Napurí, Andrés</strong>; Andrade, Luis; Delgado, Enrique & Frisancho, Susana. Historias de vida con miembros de pueblos indígenas: apuntes metodológicos a partir de dos libros recientes. <em>Indiana</em>, 40, 1, 263-289. DOI: <a href="https://doi.org/10.18441/ind.v40i1.263-289" target="_blank">10.18441/ind.v40i1.263-289</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2022</span>
+    <span class="pub-info">Bolo, Oswaldo & <strong>Napurí, Andrés</strong>. <em>Letras (Lima)</em>: algunas lecciones hacia el centenario. <em>Letras (Lima)</em>, 93, 138, pp. 4-14. DOI: <a href="https://doi.org/10.30920/letras.93.138.1" target="_blank">10.30920/letras.93.138.1</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2020</span>
+    <span class="pub-info">Rojas-Berscia, Luis Miguel; <strong>Napurí, Andrés</strong> & Wang, Lei. Shawi (Chayahuita). <em>Journal of the International Phonetic Association</em>, 50, 3, pp. 417-430. DOI: <a href="https://doi.org/10.1017/S0025100318000415" target="_blank">10.1017/S0025100318000415</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2018</span>
+    <span class="pub-info"><strong>Napurí, Andrés</strong> & †Panduro, Walter. Sobre partes del cuerpo bora: polisemia y derivación nominal con cambio tonal. <em>Línguas Indígenas Americanas</em>, 18, 2, pp. 7-19. DOI: <a href="https://doi.org/10.20396/liames.v18i2.8651025" target="_blank">10.20396/liames.v18i2.8651025</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2018</span>
+    <span class="pub-info">“Eso era mi meta de mí”: el doble posesivo en dos variedades de español amazónico. <em>Lexis</em>, 42, 1, pp. 191-205. DOI: <a href="https://doi.org/10.18800/lexis.201801.008" target="_blank">10.18800/lexis.201801.008</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2015</span>
+    <span class="pub-info">Breve caracterización fonológica de la lengua bora. <em>Lenguaje y Sociedad</em>, 15, 2, pp. 15-34. DOI: <a href="https://doi.org/10.15381/lengsoc.v15i2.22574" target="_blank">10.15381/lengsoc.v15i2.22574</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2013</span>
+    <span class="pub-info">Adquisición de las vocales anteriores del español por hablantes de quechua. <em>Estudios Interlingüísticos</em>, 1, pp. 87-101.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2011</span>
+    <span class="pub-info">Análisis de dos duraciones: durar y durante. <em>Lexis</em>, 35, 2, pp. 365-377. DOI: <a href="https://doi.org/10.18800/lexis.201102.006" target="_blank">10.18800/lexis.201102.006</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2009</span>
+    <span class="pub-info">Definiciones en las <em>Papeletas lexicográficas de Ricardo Palma</em>. <em>Boletín de la Academia Peruana de la Lengua</em>, 48, pp. 125-137. DOI: <a href="https://doi.org/10.46744/bapl.200902.007" target="_blank">10.46744/bapl.200902.007</a>.</span>
+  </div>
+</div>
+
+<div style="height: 50px;"></div>
+<h1>Book Chapters</h1>
+
+<div class="pub-list">
+  <div class="pub-item">
+    <span class="pub-year">2024</span>
+    <span class="pub-info">Una breve reflexión sobre el español amazónico y la importancia de las voces awajún. Silvia Romio, Manuel Cornejo Chaparro & Jean-Pierre Chaumeil (eds.). <em>Por mi camino. Memorias de Daniel Danducho. Primer profesor bilingüe awajún</em>, CAAAP, IFEA, pp. 203-214.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2022</span>
+    <span class="pub-info"><em>Tújpawa</em>: los arreboles en el cielo (pueblo bora). Óscar Espinosa & Emanuele Fabiano (eds.). <em>Las enfermedades que llegan de lejos: los pueblos amazónicos del Perú frente a las epidemias del pasado y a la COVID-19</em>, Fondo Editorial PUCP, pp. 63-68, URL <a href="https://hdl.handle.net/20.500.14657/190528" target="_blank">20.500.14657/190528</a></span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2021</span>
+    <span class="pub-info">“Hablábamos al revés y ahí aprendimos, malogrando el castellano”: diálogo entre el español amazónico y la dialectología coseriana. Carlos Garatea & Jorge Wiesse (dirs.), Marta Fernández Alcaide (coord.). <em>Actualidad y futuro del pensamiento de Eugenio Coseriu. Estudios de teoría del lenguaje, descripción lingüística, dimensión textual y lingüística peruana</em>, Editorial Universidad de Sevilla, Fondo Editorial PUCP & Universidad del Pacífico, pp. 264-287, URL <a href="https://idus.us.es/server/api/core/bitstreams/c0734ed0-61be-4a06-b448-3c271008a793/content" target="_blank">c0734ed0-61be-4a06-b448-3c271008a793/content</a></span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2017</span>
+    <span class="pub-info">Revitalization of the Bora Language. Peter Trifonas & Themistoklis Aravossitas (eds.). <em>International Handbook of Heritage Language Education Research & Pedagogy</em>, Springer International Publishing, pp. 787-800, DOI: <a href="https://doi.org/10.1007/978-3-319-44694-3_24" target="_blank">10.1007/978-3-319-44694-3_24</a>.</span>
+  </div>
+  <div class="pub-item">
+    <span class="pub-year">2013</span>
+    <span class="pub-info">Bases fonológicas del español andino: la relevancia de las vocales del quechua. Carla Amorós, Rudolf Muhr, Carmen Fernández, Klaus Zimmermann, Emilio Prieto & Natividad Hernández (eds.). <em>Exploring Linguistic Standards in Non-Dominant Varieties of Pluricentric Languages</em>, Peter Lang Verlag, pp. 423-440.</span>
+  </div>
+</div>
+
+<style>
+.pub-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em; /* space between publications */
+}
+
+.pub-item {
+  display: flex;
+}
+
+.pub-year {
+  width: 80px; /* fixed width for year column */
+  font-weight: normal;
+  text-align: right;
+  margin-right: 1em; /* space between year and info */
+}
+
+.pub-info {
+  flex: 1; /* takes remaining space */
+}
+</style>
+
+<hr>
+<ol>
+  <li id="footnote1">
+    This research is the result of training or advising students. 
+    <a href="#top">↩</a>
+  </li>
+</ol>
