--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,8 +23,8 @@ author_profile: true
     <span class="pub-info"> †Peña, Keren; †Pimentel, Ángel; †Quiroz, Gonzalo & <strong>Napurí, Andrés</strong>. Epéntesis y coalescencia en la lengua asháninka de Mazamari (lengua arahuaca): una explicación desde la teoría armónica serial. <em>Onomáizen</em>, 76(2), DOI: <a href="https://doi.org/10.7764/onomazein.76.02" target="_blank">10.7764/onomazein.76.02</a>.</span>
   </div>
   <div class="pub-item">
-    <span class="pub-year">to be published</span>
-    <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), DOI: <a href="https://doi.org/10.17533/udea.mut.v18n2aXX" target="_blank">10.17533/udea.mut.v18n2aXX</a>.</span>
+    <span class="pub-year">2025</span>
+    <span class="pub-info">Andrade, Luis, <strong>Napurí, Andrés</strong>, Frisancho, Susana & Delgado, Enrique. Agencia de los intérpretes indígenas, Estado y derechos humanos: la crisis de enero del 2023 en el Perú. <em>Mutatis Mutandis. Revista Latinoamericana de Traducción</em>, 18(2), DOI: <a href="https://doi.org/10.17533/udea.mut.v18n2a02" target="_blank">10.17533/udea.mut.v18n2a02</a>.</span>
   </div>
   <div class="pub-item">
     <span class="pub-year">under review</span>
