--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -19,6 +19,7 @@ author_profile: true
 
 <div class="pub-list">
   <div class="pub-item">
+    <div class="pub-item">
     <span class="pub-year">under review</span>
     <span class="pub-info">Frisancho, Susana; Andrade, Luis; Delgado, Enrique & <strong>Napurí, Andrés</strong>. Moral Motivation and Identity of Indigenous Interpreters during the 2023 Peruvian Political Crisis. <em>Journal XYZ</em></span>
   </div>
